--- a/src/todos/components/TodoItem.css
+++ b/src/todos/components/TodoItem.css
@@ -1,17 +1,31 @@
 .todo-item {
   width: 80%;
-  height: 40px;
-  border: 1px solid;
+  height: 60px;
+  border-radius: 6px;
   margin-bottom: 16px;
   padding: 0 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: lightgray;
 }
 
-.todo-item__btn {
+.todo-item span {
+  font-size: 18px;
+}
+
+.todo-item__btn button {
+  width: 70px;
+  height: 40px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .todo-item__btn__modify {
   margin-right: 5px;
+  color: darkgreen;
+}
+
+.todo-item__btn_delete {
+  color: red;
 }
