Feat: 투두 수정 기능 추가

--- a/src/todos/components/TodoItem.css
+++ b/src/todos/components/TodoItem.css
@@ -14,6 +14,11 @@
   font-size: 18px;
 }
 
+.todo-item__modify-input {
+  height: 24px;
+  font-size: 17px;
+}
+
 .todo-item__btn button {
   width: 70px;
   height: 40px;
